added base layout of gui

--- a/rts/index.html
+++ b/rts/index.html
@@ -30,6 +30,13 @@
 		<script src="src/map/tilemap.js"></script>
 		<script src="src/map/testmap.js"></script>
 		
+		<script src="src/ui/gui.js"></script>
+		<script src="src/ui/minimap.js"></script>
+		<script src="src/ui/commandPanel.js"></script>
+		<script src="src/ui/resourceBar.js"></script>
+		<script src="src/ui/unitBar.js"></script>
+		<script src="src/ui/unitPortrait.js"></script>
+		
 		<script src="src/rts.js"></script>
 	</body>
 </html>
