added gui-timer to css and html

--- a/rts/index.html
+++ b/rts/index.html
@@ -15,6 +15,7 @@
 			<div id="gui-bottom-left"></div>
 			<div id="gui-bottom-center"></div>
 			<div id="gui-bottom-right"></div>
+			<div id="gui-timer"></div>
 		</div>
 		
 		<script src="src/gameplay/requestNextAnimationFrame.js"></script>
@@ -36,6 +37,7 @@
 		<script src="src/ui/resourceBar.js"></script>
 		<script src="src/ui/unitBar.js"></script>
 		<script src="src/ui/unitPortrait.js"></script>
+		<script src="src/ui/timer.js"></script>
 		
 		<script src="src/rts.js"></script>
 	</body>
