--- a/rts/index.html
+++ b/rts/index.html
@@ -30,7 +30,7 @@
 		<script src="src/gameplay/selectbox.js"></script>
 		
 		<script src="src/units/unit.js"></script>
-		<script src="src/units/hoplite.js"></script>
+		<script src="src/units/infantry.js"></script>
 		<script src="src/units/villager.js"></script>
 		<script src="src/units/faction.js"></script>
 		
