--- a/rts/index.html
+++ b/rts/index.html
@@ -44,6 +44,7 @@
 		<script src="src/ui/unitBar.js"></script>
 		<script src="src/ui/unitPortrait.js"></script>
 		<script src="src/ui/timer.js"></script>
+		<script src="src/ui/rectangle.js"></script>
 		
 		<script src="src/rts.js"></script>
 	</body>
