--- a/rts/index.html
+++ b/rts/index.html
@@ -28,6 +28,7 @@
 		<script src="src/gameplay/input.js"></script>
 		<script src="src/gameplay/selectbox.js"></script>
 		
+		<script src="src/units/helperclasses.js"></script>
 		<script src="src/units/unit.js"></script>
 		<script src="src/units/hoplite.js"></script>
 		<script src="src/units/villager.js"></script>
