--- a/rts/index.html
+++ b/rts/index.html
@@ -22,6 +22,7 @@
 		<script src="src/resource/unitResources.js"></script>
 		<script src="src/resource/buildingResources.js"></script>
 		<script src="src/resource/guiResources.js"></script>
+		<script src="src/resource/soundtrackResources.js"></script>
 		<script src="src/resource/resourceManager.js"></script>
 		
 		<script src="src/gameplay/requestNextAnimationFrame.js"></script>
