--- a/rts/index.html
+++ b/rts/index.html
@@ -29,6 +29,8 @@
 		<script src="src/gameplay/input.js"></script>
 		<script src="src/gameplay/selectbox.js"></script>
 		
+		<script src="src/buildings/building.js"></script>
+		<script src="src/buildings/towncenter.js"></script>
 		<script src="src/units/unit.js"></script>
 		<script src="src/units/hoplite.js"></script>
 		<script src="src/units/villager.js"></script>
