--- a/rts/index.html
+++ b/rts/index.html
@@ -31,6 +31,8 @@
 		
 		<script src="src/buildings/building.js"></script>
 		<script src="src/buildings/towncenter.js"></script>
+		<script src="src/buildings/barracks.js"></script>
+		
 		<script src="src/units/unit.js"></script>
 		<script src="src/units/hoplite.js"></script>
 		<script src="src/units/villager.js"></script>
