added PlayerResource prototype

--- a/rts/index.html
+++ b/rts/index.html
@@ -42,6 +42,7 @@
 		
 		<script src="src/map/resource.js"></script>
 		<script src="src/map/metal.js"></script>
+		<script src="src/map/playerResource.js"></script>
 		
 		<script src="src/map/tilemap.js"></script>
 		<script src="src/map/testmap.js"></script>
