--- a/rts/index.html
+++ b/rts/index.html
@@ -43,6 +43,7 @@
 		<script src="src/map/resource.js"></script>
 		<script src="src/map/metal.js"></script>
 		<script src="src/map/playerResource.js"></script>
+		<script src="src/map/mineralMine.js"></script>
 		
 		<script src="src/map/tilemap.js"></script>
 		<script src="src/map/testmap.js"></script>
