--- a/rts/index.html
+++ b/rts/index.html
@@ -44,6 +44,9 @@
 		<script src="src/map/metal.js"></script>
 		<script src="src/map/playerResource.js"></script>
 		<script src="src/map/mineralMine.js"></script>
+		<script src="src/map/factionResources.js"></script>
+		<script src="src/map/minerals.js"></script>
+		<script src="src/map/supply.js"></script>
 		
 		<script src="src/map/tilemap.js"></script>
 		<script src="src/map/testmap.js"></script>
