--- a/rts/index.html
+++ b/rts/index.html
@@ -57,6 +57,7 @@
 		<script src="src/ui/resourceBar.js"></script>
 		<script src="src/ui/unitBar.js"></script>
 		<script src="src/ui/unitPortrait.js"></script>
+		<script src="src/ui/tooltip.js"></script>
 		<script src="src/ui/timer.js"></script>
 		<script src="src/ui/rectangle.js"></script>
 		<script src="src/ui/button.js"></script>
