--- a/rts/index.html
+++ b/rts/index.html
@@ -41,6 +41,10 @@
 		<script src="src/units/villager.js"></script>
 		<script src="src/units/faction.js"></script>
 		
+		<script src="src/ai/army.js"></script>
+		<script src="src/ai/body.js"></script>
+		<script src="src/ai/brain.js"></script>
+		
 		<script src="src/map/playerResource.js"></script>
 		<script src="src/map/mineralMine.js"></script>
 		<script src="src/map/factionResources.js"></script>
@@ -48,7 +52,7 @@
 		<script src="src/map/supply.js"></script>
 		
 		<script src="src/map/tilemap.js"></script>
-		<script src="src/map/testmap.js"></script>
+		<script src="src/map/lost-temple.js"></script>
 		
 		<script src="src/ui/credits.js"></script>
 		<script src="src/ui/gui.js"></script>
