Fixin moar stuff

--- a/rts/index.html
+++ b/rts/index.html
@@ -54,6 +54,7 @@
 		<script src="src/map/tilemap.js"></script>
 		<script src="src/map/lost-temple.js"></script>
 		
+		<script src="src/ui/button.js"></script>
 		<script src="src/ui/credits.js"></script>
 		<script src="src/ui/gui.js"></script>
 		<script src="src/ui/minimap.js"></script>
