--- a/rts/index.html
+++ b/rts/index.html
@@ -34,6 +34,7 @@
 		<script src="src/buildings/building.js"></script>
 		<script src="src/buildings/towncenter.js"></script>
 		<script src="src/buildings/barracks.js"></script>
+		<script src="src/buildings/connector.js"></script>
 		
 		<script src="src/units/unit.js"></script>
 		<script src="src/units/hoplite.js"></script>
