--- a/rts/index.html
+++ b/rts/index.html
@@ -35,6 +35,7 @@
 		<script src="src/buildings/towncenter.js"></script>
 		<script src="src/buildings/barracks.js"></script>
 		<script src="src/buildings/connector.js"></script>
+		<script src="src/buildings/phantombuilding.js"></script>
 		
 		<script src="src/units/unit.js"></script>
 		<script src="src/units/hoplite.js"></script>
